--- a/item-eyez/App.xaml
+++ b/item-eyez/App.xaml
@@ -1470,8 +1470,6 @@
         </Style>
 
         <Style x:Key="ScrollBarThumb" TargetType="{x:Type Thumb}">
-            <Setter Property="MinHeight" Value="20" />
-            <Setter Property="MinWidth" Value="20" />
             <Setter Property="Template">
                 <Setter.Value>
                     <ControlTemplate TargetType="{x:Type Thumb}">
@@ -1491,7 +1489,16 @@
             <Setter Property="Template">
                 <Setter.Value>
                     <ControlTemplate TargetType="{x:Type RepeatButton}">
-                        <Border Background="{StaticResource GroupBox.Static.Background}" />
+                        <Border
+                            x:Name="templateRoot"
+                            Background="{StaticResource GroupBox.Static.Background}"
+                            BorderBrush="{StaticResource GroupBox.Static.Background}"
+                            BorderThickness="1"
+                            CornerRadius="2">
+                            <ContentPresenter
+                                HorizontalAlignment="Center"
+                                VerticalAlignment="Center" />
+                        </Border>
                     </ControlTemplate>
                 </Setter.Value>
             </Setter>
@@ -1512,7 +1519,7 @@
                     Grid.Row="0"
                     Command="ScrollBar.LineUpCommand"
                     Style="{StaticResource ScrollBarPageButton}">
-                    <Path Data="M 0 4 L 8 4 L 4 0 Z" Fill="{StaticResource Menu.Static.Foreground}" />
+                    <Path Data="M 0 4 L 3.5 0 L 7 4 Z" Fill="{StaticResource Menu.Static.Foreground}" />
                 </RepeatButton>
                 <Track
                     Grid.Row="1"
@@ -1532,7 +1539,7 @@
                     Grid.Row="2"
                     Command="ScrollBar.LineDownCommand"
                     Style="{StaticResource ScrollBarPageButton}">
-                    <Path Data="M 0 0 L 4 4 L 8 0 Z" Fill="{StaticResource Menu.Static.Foreground}" />
+                    <Path Data="M 0 0 L 3.5 4 L 7 0 Z" Fill="{StaticResource Menu.Static.Foreground}" />
                 </RepeatButton>
             </Grid>
         </ControlTemplate>
@@ -1552,7 +1559,7 @@
                     Grid.Column="0"
                     Command="ScrollBar.LineLeftCommand"
                     Style="{StaticResource ScrollBarPageButton}">
-                    <Path Data="M 4 0 L 4 8 L 0 4 Z" Fill="{StaticResource Menu.Static.Foreground}" />
+                    <Path Data="M 4 0 L 0 3.5 L 4 7 Z" Fill="{StaticResource Menu.Static.Foreground}" />
                 </RepeatButton>
                 <Track Grid.Column="1" ViewportSize="0">
                     <Track.DecreaseRepeatButton>
@@ -1569,7 +1576,7 @@
                     Grid.Column="2"
                     Command="ScrollBar.LineRightCommand"
                     Style="{StaticResource ScrollBarPageButton}">
-                    <Path Data="M 0 0 L 4 4 L 0 8 Z" Fill="{StaticResource Menu.Static.Foreground}" />
+                    <Path Data="M 0 0 L 4 3.5 L 0 7 Z" Fill="{StaticResource Menu.Static.Foreground}" />
                 </RepeatButton>
             </Grid>
         </ControlTemplate>
